// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should render dropdown and make it visible on click 1`] = `
.c0 {
  text-align: left;
  position: relative;
}

.c1 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c5 {
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  width: 100%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  margin-left: 0px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c22 {
  padding-right: 8px;
  padding-left: 8px;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 20px;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c28 {
  padding-right: 8px;
  padding-left: 0px;
}

.c30 {
  margin-left: auto;
}

.c32 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 8px;
  padding-left: 8px;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: auto;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c18 {
  display: block;
  position: absolute;
  width: 100%;
  bottom: 32px;
  left: 0px;
}

.c19 {
  -webkit-animation: hEZwlf 200ms cubic-bezier(0,0,0,1);
  animation: hEZwlf 200ms cubic-bezier(0,0,0,1);
  -webkit-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  opacity: 0;
  z-index: 99;
}

.c34 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c34:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c34:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c34:focus {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c34 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c7 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c8 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c23 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c29 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c37 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c36 {
  opacity: 1;
}

.c11 {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11::-webkit-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c11::-moz-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c11:-ms-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c11::placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c11:focus {
  outline: none;
}

.c15 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  background-color: hsla(218,89%,51%,1);
  border-width: 1px;
  height: 1px;
  -webkit-animation: cAlpMa 250ms cubic-bezier(0.3,0,0.2,1) forwards;
  animation: cAlpMa 250ms cubic-bezier(0.3,0,0.2,1) forwards;
}

.c10 {
  background-color: hsla(218,89%,51%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c10:hover {
  background-color: hsla(218,89%,51%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10:focus-within {
  background-color: hsla(218,89%,51%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c20 {
  background-color: hsla(0,0%,100%,1);
  border-width: 1px;
  border-color: hsla(216,15%,54%,0.18);
  border-style: solid;
  border-radius: 4px;
  box-shadow: 0 12px 16px -4px hsla(217,56%,17%,0.08),0 4px 6px -2px hsla(217,56%,17%,0.03);
}

.c24 {
  overflow-y: auto;
  max-height: 300px;
  padding: 8px;
}

.c24 [role=group]:last-child > [role=separator]:last-child {
  display: none;
}

.c25 {
  border-width: 4px;
  border-style: solid;
  border-color: transparent;
  text-align: left;
  background-color: transparent;
  padding: 4px;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  display: block;
}

.c25:hover:not([aria-disabled=true]) {
  background-color: hsla(216,15%,54%,0.09);
}

.c25[aria-selected=true] {
  background-color: hsla(218,89%,51%,0.09);
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background-color: hsla(216,15%,54%,0.09);
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background-color: hsla(216,15%,54%,0.09);
}

<div>
  <div
    class="c0"
    data-blade-component="base-box"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <div
        class="c2"
        data-blade-component="visually-hidden"
      >
        <input
          aria-hidden="true"
          tabindex="-1"
          value=""
        />
      </div>
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <label
              data-blade-component="form-label"
              for="dropdown-7-trigger-1-input-2"
              id="dropdown-7-label"
              style="width: auto; flex-shrink: 0; margin-right: 16px;"
            >
              <div
                class="c5"
                data-blade-component="base-box"
              >
                <div
                  class="c6"
                  data-blade-component="base-box"
                >
                  <p
                    class="c7"
                    data-blade-component="text"
                  >
                    Fruits
                  </p>
                  <div
                    class="c2"
                    data-blade-component="visually-hidden"
                  >
                    <p
                      class="c8"
                      data-blade-component="text"
                    />
                  </div>
                </div>
              </div>
            </label>
          </div>
          <div
            class="c9 c10"
            data-blade-component="base-box"
          >
            <button
              aria-controls="dropdown-7-actionlist"
              aria-describedby=""
              aria-disabled="false"
              aria-expanded="true"
              aria-haspopup="dialog"
              aria-invalid="false"
              aria-required="false"
              class="c11"
              data-blade-component="styled-base-input"
              id="dropdown-7-trigger-1-input-2"
              placeholder="Select Option"
              role="combobox"
              type="button"
              value=""
            >
              Select Option
            </button>
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <div
                class="c13"
                data-blade-component="base-box"
              >
                <div
                  class="c14"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31658 16.0976 5.68342 16.0976 5.29289 15.7071C4.90237 15.3166 4.90237 14.6834 5.29289 14.2929L11.2929 8.29289Z"
                      data-blade-component="svg-path"
                      fill="hsla(217, 56%, 17%, 1)"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class=" c15"
              data-blade-component="base-box"
            />
          </div>
        </div>
        <div
          class="c16"
          data-blade-component="base-box"
        >
          <div
            class="c17"
            data-blade-component="base-box"
          />
        </div>
      </div>
    </div>
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <div
        class="c18 c19"
        data-blade-component="base-box"
        style="opacity: 1;"
      >
        <div
          aria-labelledby="dropdown-7-label"
          class=" c20"
          data-blade-component="base-box"
          id="dropdown-7-actionlist"
          role="dialog"
        >
          <div
            class=" c21"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 24 24"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.944 4.921a10 10 0 1 1-2.377 10.411 1 1 0 1 1 1.886-.664 8 8 0 1 0 1.872-8.3L4.475 9H8a1 1 0 1 1 0 2H2a1 1 0 0 1-1-1V4a1 1 0 1 1 2 0v3.64L5.944 4.92ZM12 6a1 1 0 0 1 1 1v5.586l2.707 2.707a1 1 0 0 1-1.414 1.414l-3-3A1 1 0 0 1 11 13V7a1 1 0 0 1 1-1Z"
                  data-blade-component="svg-path"
                  fill="hsla(216, 16%, 60%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="c22"
              data-blade-component="base-box"
            >
              <p
                class="c23"
                data-blade-component="text"
              >
                Recent Searches
              </p>
            </div>
          </div>
          <div
            aria-multiselectable="false"
            class=" c24"
            data-blade-component="base-box"
            role="listbox"
          >
            <button
              aria-selected="false"
              class=" c25"
              data-blade-component="base-box"
              data-index="0"
              data-value="apple"
              id="dropdown-7-0"
              role="option"
              tabindex="-1"
              type="button"
            >
              <div
                class="c26"
                data-blade-component="base-box"
              >
                <div
                  class="c27"
                  data-blade-component="base-box"
                />
                <div
                  class="c28"
                  data-blade-component="base-box"
                >
                  <p
                    class="c29"
                    data-blade-component="text"
                  >
                    Apple
                  </p>
                </div>
                <div
                  class="c30"
                  data-blade-component="base-box"
                />
              </div>
              <div
                class=""
                data-blade-component="base-box"
              />
            </button>
            <button
              aria-selected="false"
              class=" c25"
              data-blade-component="base-box"
              data-index="1"
              data-value="mango"
              id="dropdown-7-1"
              role="option"
              tabindex="-1"
              type="button"
            >
              <div
                class="c26"
                data-blade-component="base-box"
              >
                <div
                  class="c27"
                  data-blade-component="base-box"
                />
                <div
                  class="c28"
                  data-blade-component="base-box"
                >
                  <p
                    class="c29"
                    data-blade-component="text"
                  >
                    Mango
                  </p>
                </div>
                <div
                  class="c30"
                  data-blade-component="base-box"
                />
              </div>
              <div
                class=""
                data-blade-component="base-box"
              />
            </button>
          </div>
          <div
            aria-label="Search Tips"
            class=" c31"
            data-blade-component="base-box"
            role="group"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 24 24"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.618 18.032a9 9 0 1 1 1.414-1.414l3.675 3.675a1 1 0 0 1-1.414 1.414l-3.675-3.675ZM4 11a7 7 0 1 1 12.041 4.857 1.009 1.009 0 0 0-.185.184A7 7 0 0 1 4 11Z"
                  data-blade-component="svg-path"
                  fill="hsla(216, 16%, 60%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="c32"
              data-blade-component="base-box"
            >
              <p
                class="c23"
                data-blade-component="text"
              >
                Search Tips
              </p>
            </div>
            <div
              class="c33"
              data-blade-component="base-box"
            >
              <button
                class="c34"
                data-blade-component="button"
                role="button"
                type="button"
              >
                <div
                  class="c35 c36"
                  data-blade-component="base-box"
                >
                  <div
                    class="c37"
                    data-blade-component="base-text"
                  >
                    Apply
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> with <DropdownButton /> should render menu and make items clickable 1`] = `
.c0 {
  text-align: left;
  position: relative;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 20px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  padding-right: 8px;
  padding-left: 0px;
}

.c15 {
  margin-left: auto;
}

.c6 {
  display: block;
  position: absolute;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  min-width: 240px;
  max-width: 400px;
  right: 0px;
  bottom: 20px;
}

.c7 {
  -webkit-animation: hMpNnn 200ms cubic-bezier(0,0,0,1);
  animation: hMpNnn 200ms cubic-bezier(0,0,0,1);
  -webkit-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  opacity: 0;
  z-index: 99;
}

.c1 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c1:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c1:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c1:focus {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c1 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c4 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c14 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c3 {
  opacity: 1;
}

.c8 {
  background-color: hsla(0,0%,100%,1);
  border-width: 1px;
  border-color: hsla(216,15%,54%,0.18);
  border-style: solid;
  border-radius: 4px;
  box-shadow: 0 12px 16px -4px hsla(217,56%,17%,0.08),0 4px 6px -2px hsla(217,56%,17%,0.03);
}

.c9 {
  overflow-y: auto;
  max-height: 300px;
  padding: 8px;
}

.c9 [role=group]:last-child > [role=separator]:last-child {
  display: none;
}

.c10 {
  border-width: 4px;
  border-style: solid;
  border-color: transparent;
  text-align: left;
  background-color: transparent;
  padding: 4px;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  display: block;
}

.c10:hover:not([aria-disabled=true]) {
  background-color: hsla(216,15%,54%,0.09);
}

.c10[aria-selected=true] {
  background-color: hsla(218,89%,51%,0.09);
}

<div>
  <div
    class="c0"
    data-blade-component="base-box"
  >
    <button
      aria-activedescendant="dropdown-897-0"
      aria-controls="dropdown-897-actionlist"
      aria-expanded="false"
      aria-haspopup="menu"
      class="c1"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class="c2 c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          data-blade-component="base-text"
        >
          My Account
        </div>
      </div>
    </button>
    <div
      class="c5"
      data-blade-component="base-box"
    >
      <div
        class="c6 c7"
        data-blade-component="base-box"
        style="opacity: 0;"
      >
        <div
          aria-labelledby="dropdown-897-label"
          class=" c8"
          data-blade-component="base-box"
          id="dropdown-897-actionlist"
          role="menu"
        >
          <div
            class=" c9"
            data-blade-component="base-box"
          >
            <button
              class=" c10 active-focus"
              data-blade-component="base-box"
              data-index="0"
              data-value="profile"
              id="dropdown-897-0"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              <div
                class="c11"
                data-blade-component="base-box"
              >
                <div
                  class="c12"
                  data-blade-component="base-box"
                />
                <div
                  class="c13"
                  data-blade-component="base-box"
                >
                  <p
                    class="c14"
                    data-blade-component="text"
                  >
                    Profile
                  </p>
                </div>
                <div
                  class="c15"
                  data-blade-component="base-box"
                />
              </div>
              <div
                class=""
                data-blade-component="base-box"
              />
            </button>
            <a
              class=" c10"
              data-blade-component="base-box"
              data-index="1"
              data-value="settings"
              href="/settings"
              id="dropdown-897-1"
              role="link"
              tabindex="-1"
              type="button"
            >
              <div
                class="c11"
                data-blade-component="base-box"
              >
                <div
                  class="c12"
                  data-blade-component="base-box"
                />
                <div
                  class="c13"
                  data-blade-component="base-box"
                >
                  <p
                    class="c14"
                    data-blade-component="text"
                  >
                    Settings
                  </p>
                </div>
                <div
                  class="c15"
                  data-blade-component="base-box"
                />
              </div>
              <div
                class=""
                data-blade-component="base-box"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
